# tauri-plugin-bar

./: .gitignore  Cargo.toml  README.md  package.json  pbcopy
android/: build.gradle.kts  local.properties  settings.gradle
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: ImmersionBarPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: StatusBarPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: disable.toml  enable.toml  set_immersionbar.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
