[package]
name = "tauri-plugin-immersionbar"
version = "0.1.2"
authors = [ "HumphreyDunn" ]
description = "a immersionbar plugin for tauri with android/ios."
repository = "https://github.com/ShuttleSpace/tauri-plugin-bar"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-immersionbar"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
